--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "express-ejs-layouts": "^2.5.1",
     "express-messages": "^1.0.1",
     "express-session": "^1.18.1",
+    "express-socket.io-session": "^1.3.5",
     "express-validator": "^7.2.1",
     "mongoose": "^8.16.2",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
